# bobetocalo_pami20

./: CMakeLists.txt  README.md
include/: FaceMultitaskMnnOr.hpp  HonariChannelFeatures.hpp  ShapeCascade.hpp
src/: FaceMultitaskMnnOr.cpp  HonariChannelFeatures.cpp
test/: face_multitask_bobetocalo_pami20_test.cpp
